tests/snapshots/repl_tests__tests__chat_scroll_bottom.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Chat Messages ──────────────────────────────────────────┐▲
│[12:00:00] 👤  User: Message 9                            │║
│[12:00:00] 👤  User: Message 10                           │║
│[12:00:00] 👤  User: Message 11                           │█
│[12:00:00] 👤  User: Message 12                           │█
│[12:00:00] 👤  User: Message 13                           │█
│[12:00:00] 👤  User: Message 14                           │║
│[12:00:00] 👤  User: Message 15                           │║
└ · Ctrl+B bash · F4 select · Ctrl+G multi · Ctrl+P pause ┘▼
