tests/snapshots/repl_tests__tests__chat_scroll_middle.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Chat Messages ──────────────────────────────────────────┐▲
│[12:00:00] 👤  User: Message 6                            │║
│[12:00:00] 👤  User: Message 7                            │█
│[12:00:00] 👤  User: Message 8                            │█
│[12:00:00] 👤  User: Message 9                            │█
│[12:00:00] 👤  User: Message 10                           │║
│[12:00:00] 👤  User: Message 11                           │║
│[12:00:00] 👤  User: Message 12                           │║
└ · Ctrl+B bash · F4 select · Ctrl+G multi · Ctrl+P pause ┘▼
