tests/snapshots/repl_tests__tests__chat_single_agent_message_multiline.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Chat Messages ──────────────────────────────────────────┐▲
│[12:00:00] 🤖  Agent: Line one                            │█
│Line two                                                 │█
│Line three                                               │█
│                                                         │█
│                                                         │█
│                                                         │║
│                                                         │║
└ · Ctrl+B bash · F4 select · Ctrl+G multi · Ctrl+P pause ┘▼
