tests/snapshots/repl_tests__tests__chat_single_user_message_multiline.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Chat Messages ──────────────────────────────────────────┐▲
│[12:00:00] 👤  User: This is a message                    │█
│with a newline                                           │█
│in it.                                                   │█
│                                                         │█
│                                                         │█
│                                                         │║
│                                                         │║
└ · Ctrl+B bash · F4 select · Ctrl+G multi · Ctrl+P pause ┘▼
