tests/snapshots/repl_tests__tests__chat_welcome.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Chat Messages ──────────────────────────────────────────┐▲
│✨  PeakBot vX.Y.Z                                       │█
│Start a conversation or use /help for commands.          │█
│                                                         │█
│                                                         │█
│                                                         │█
│                                                         │║
│                                                         │║
└ · Ctrl+B bash · F4 select · Ctrl+G multi · Ctrl+P pause ┘▼
