tests/snapshots/repl_tests__tests__command_popup_filtered_multi_match.snap
---
source: tests/repl_tests.rs
assertion_line: 1126
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Commands ────────────────────────────────────────────────┐                    
│  /context  Show context usage status                     │                    
│  /compact  Force context compaction                      │                    
│  /conversations  List saved conversations                │                    
│  /cd <args>  Show the working directory, or change it wi…│                    
└───────────── ↑/↓ · Tab complete · Enter run · Esc cancel ┘
