tests/snapshots/repl_tests__tests__command_popup_filtered_single_match.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Commands ────────────────────────────────────────────────┐                    
│  /stats  Show session statistics (tokens, cost)          │                    
└───────────── ↑/↓ · Tab complete · Enter run · Esc cancel ┘
