tests/snapshots/repl_tests__tests__command_popup_just_opened.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Commands ────────────────────────────────────────────────┐                    
│  /help  List available commands                          │                    
│  /stats  Show session statistics (tokens, cost)          │                    
│  /context  Show context usage status                     │                    
│  /compact  Force context compaction                      │                    
│  /conversations  List saved conversations                │                    
│  /history  Show conversation history                     │                    
│  /reset  Reset session statistics                        │                    
│  /new  Start a new conversation                          │                    
└───────────── ↑/↓ · Tab complete · Enter run · Esc cancel ┘
