tests/snapshots/repl_tests__tests__command_popup_mode_prefix_no_matches.snap
---
source: tests/repl_tests.rs
assertion_line: 1165
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Commands ────────────────────────────────────────────────┐                    
│  /model <args>  List models, or switch with /model <alia…│                    
└───────────── ↑/↓ · Tab complete · Enter run · Esc cancel ┘
